--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier": "2.5.1"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}" : "prettier --write"
   }
 }
