--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,7 @@
         "es2021": true,
         "node": true
     },
-    "extends": [
-        "plugin:react/recommended",
-        "standard",
-        "prettier"
-    ],
+    "extends": ["plugin:react/recommended", "standard", "prettier"],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -16,9 +12,6 @@
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": [
-        "react", "prettier"
-    ],
-    "rules": {
-    }
+    "plugins": ["react", "prettier"],
+    "rules": {}
 }
