integrating tmdb api using axios

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,7 @@
         "sourceType": "module"
     },
     "plugins": ["react", "prettier"],
-    "rules": {}
+    "rules": {
+        "react/prop-types": "off"
+    }
 }
